--- a/admin-panel-frontend/src/index.css
+++ b/admin-panel-frontend/src/index.css
@@ -1,11 +1,161 @@
+@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap");
+
+:root {
+  --border-radius: 4px;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-areas:
+    "head head head head head head head head"
+    "head head head head head head head head"
+    "list list list list list form form from"
+    "list list list list list form form from"
+    "list list list list list form form from"
+    "list list list list list form form from"
+    "list list list list list stat stat stat"
+    "list list list list list stat stat stat"
+    "list list list list list stat stat stat"
+    "list list list list list stat stat stat"
+    "list list list list list stat stat stat"
+    "list list list list list stat stat stat"
+    "foot foot foot foot foot foot foot foot"
+    "foot foot foot foot foot foot foot foot";
+
+  flex: 1 0 auto;
+}
+
+p {
+  margin: 0;
+}
+
+* {
+  border: 0;
+}
+
 body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  border: 0;
   background-color: #e8e8e8;
+  font-family: "Rajdhani", sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 .general-container {
-  display: grid;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 textarea {
   resize: none;
+  height: auto;
+  width: 200;
+  border-radius: var(--border-radius);
+  border: none;
+  background-color: #c4c4c4;
+  grid-column: 1 / 3;
+  font-size: 1.5em;
+}
+
+input {
+  border-radius: var(--border-radius);
+  background-color: #c4c4c4;
+
+  height: 100%;
+  font-size: 1.1em;
+  display: grid;
+  gap: 5px;
+}
+
+form {
+  display: grid;
+  height: 100%;
+  max-height: 295px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 2fr 1fr 1fr;
+  gap: 5px;
+  margin: 10px;
+}
+
+button {
+  border: none;
+  border-radius: var(--border-radius);
+}
+
+.stats {
+  font-size: 1.4em;
+  grid-area: stat;
+}
+
+.bikes-list {
+  grid-area: list;
+  overflow: scroll;
+}
+
+.toggle-style {
+  font-size: 1.2rem;
+  background-color: transparent;
+}
+
+.create-new {
+  grid-area: form;
+}
+
+.remove-btn {
+  background-color: transparent;
+
+  display: flex;
+  align-self: flex-end;
+}
+
+.formBtn {
+  background-color: #696969;
+  color: white;
+  font-weight: 600;
+}
+
+.headerStyle {
+  grid-area: head;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  background-color: #696969;
+  color: #e8e8e8;
+  font-size: 2em;
+  padding-left: 2%;
+  font-weight: 900;
+}
+
+.wrapper-btn-price {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footerStyle {
+  height: 42px;
+  grid-area: foot;
+  background-color: #696969;
+  color: #e8e8e8;
+  padding-right: 2%;
+  font-size: 1.5em;
+  margin-top: auto;
+}
+
+.bike-style {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10px;
+  font-size: 1.3em;
+  width: auto;
+
+  background-color: #c4c4c4;
+  border-radius: var(--border-radius);
 }
